Replacing the use of the Java 9+ Collections API